src/main/resources/Krakatau-master/tests/assembler/bad/noconstrhs.j
.version 52 30
.class public super eeeee
.super java/lang/Object

.const [r2] =
.end class
